Modularización del fuente de Angular2 hasta el momento

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
 </head>
 <body>
-    <escenas-list>Cargando...</escenas-list>
+    <guionMaker>Cargando...</guionMaker>
     <script type="text/javascript" src="assets/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
