--- a/public/src/index.html
+++ b/public/src/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
     <link rel="stylesheet" type="text/css" href="assets/summernote/summernote.css" />
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap-toggle/bootstrap-toggle.min.css" />
 </head>
 <body>
     <guionMaker>Cargando...</guionMaker>
     <script type="text/javascript" src="assets/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/summernote/summernote.min.js"></script>
+    <script type="text/javascript" src="assets/bootstrap-toggle/bootstrap-toggle.min.js"></script>
 </body>
 </html>
