--- a/public/src/index.html
+++ b/public/src/index.html
@@ -7,15 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="assets/styles.css" />
     <link rel="stylesheet" type="text/css" href="assets/summernote/summernote.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-toggle/bootstrap-toggle.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/styles.css" />
 </head>
 <body>
     <guionMaker>Cargando...</guionMaker>
     <script type="text/javascript" src="assets/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/summernote/summernote.min.js"></script>
-    <script type="text/javascript" src="assets/bootstrap-toggle/bootstrap-toggle.min.js"></script>
+    <script type="text/javascript" src="assets/summernote/plugin/addclass/summernote-ext-addclass.js"></script>
 </body>
 </html>
