--- a/public/src/index.html
+++ b/public/src/index.html
@@ -5,8 +5,8 @@
     <title>GuionMaker</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" type="text/css" id="bsTheme" href="assets/bootstrap/css/bootstrap-flatly.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/summernote/summernote.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
 </head>
